
Important Notes on System Requirements

Program D requires JDK 5. See above for the reasons why. The benefits available 
from this new release far outweigh the problem that JDK 5 is not yet available 
for all platforms. If you are a user of a platform that does not yet have JDK 5 
support, you are strongly encouraged to get involved in hastening the day when 
it does.
Significant Open Issues

    *

      The two included IM listeners fail to function, due to changes in 
protocols for the various services. Someone with knowledge of these services is 
invited to take a look and submit patches. The problems, which can be easily 
reproduced by enabling the listeners in the bots.xml file (and filling in some 
valid account information), are:
          o

            AIMListener: Loops with a "Error in main AIMListener loop." message 
(haven't tracked this down in the debugger yet as of rc1).
          o

            ICQListener: Starts contacting the server, but never succeeds in 
logging in.
    *

      The issue of "merge policies", as for so long, has not yet been 
addressed. And does anyone care? Well, probably. But this author thinks that 
"merge policy" is just a small part of a much larger issue of knowledge base 
quality issues. Addressing these should be a project unto itself. Nonetheless, 
when there's a spare moment, we'll update the merge policy handling. Or feel 
free to submit a patch.
    *

      The AIML schema includes embedded Schematron directives that fill in a 
validation gap that W3C XML Schemas cannot address—namely, the three forms of 
condition. A similar approach could probably take care of the other remaining 
gap of which I'm aware: the text part of mixed pattern expressions, which is 
currently not fully constrained by the schema. However, as of this writing, I 
haven't found how to process the Schematron directives as part of the loadtime 
validation process, so you still have the possibility of loading some limited 